--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
-<title>良心！紫砂壶世家掌柜揭露业界机密.传授毕生经验!!!</title>
+<title>良心!紫砂壶世家掌柜揭露业界机密,传授鉴别经验!</title>
 
 
 <style>
@@ -35,15 +35,15 @@ img{ width:100%}
   <div class="kuang">
        <div class="con">
 
-	   <h2 align="center">加微信1768717056领取老杨开壶方法和鉴别秘籍!</h2>
+	   <h2 align="center">加微信1768717056领取老杨开壶方法和茶壶鉴别秘籍!</h2>
   <p><img src="images/1.jpg"></p>
 	   
 	   <p>  
-大家好，我是肖建明(左二)，<span class="spanbgyellow">专注纯手工做紫砂壶二十多年</span>,宜兴丁蜀镇人,祖上三代人都是做茶壶的.我们家自产自销,少量珍品,留给有缘人,
+大家好，我是老杨，<span class="spanbgyellow">专注纯手工做紫砂壶二十多年</span>,宜兴丁蜀镇人,紫砂产地的人们基本都是做茶壶的.我们家也自产自销,少量珍品,留给有缘人,
 
-家族收藏的正宗珍贵稀少的宜兴黄龙山原矿紫砂泥料,采用
+家藏的正宗宜兴黄龙山原矿紫砂泥料,采用
 
-宜兴传统纯手工艺制壶,做出一把壶大概需要<span class="spanbgyellow">半个月左右</span>. </p>
+宜兴传统纯手工艺制壶,做出一把全手工好壶大概需要<span class="spanbgyellow">半个月左右</span>. </p>
 	 
 	   <p> 因为家庭原因，从小耳闻目染，对紫砂有了很多的了解。每天看着爷爷和父亲坚持用<span class="spanbgyellow">传统手工艺制壶，对制壶的每一个细节都严格要求,所以制作周期比较长</span>，越来越觉得，一把紫砂壶的诞生是那么的不容易，而他们态度，对我以后学习制壶的路，产生了很大的影响。</p>
 	   <p>或许是由于从小接触的多了，在我正式学习制壶后，便是得心应手，我做出来的壶很快得到了父亲的认可。在这期间除了在家里跟爷爷和父亲学习制壶，只要有时间父亲就会带我去拜访名师，向其学习、讨教，而我的<span class="spanbgyellow">制壶手艺日益增长</span>。</p>
@@ -65,7 +65,7 @@ img{ width:100%}
 		<p> 我不是什么有名的大师，我也不在乎那些头衔，但是我可以很自信的告诉大家，我做出来的壶绝对不会比那些所谓的大师要差。</p>
  <p><img src="images/4.jpg"></p>
  
-　<p >　我的老婆“廖邦英”，在我们没相识之前就开始制壶，她的师傅“许全芳”是2009年手工制陶大赛一等奖获得者，其作品<span class="spanbgyellow">《海棠壶》</span>荣获上海中国公益美术大师精品展金奖，作品<span class="spanbgyellow">《君德如意壶》获国家专利</span>。现任宜兴陶瓷实训基地，制壶培训班辅导教师。<span class="spanbgyellow">（壶的售价高达几万元/把）</span> </p>
+　<p >　我的老婆，在我们没相识之前就开始制壶，她的师傅是2009年手工制陶大赛一等奖获得者，其作品<span class="spanbgyellow">《海棠壶》</span>荣获上海中国公益美术大师精品展金奖，作品<span class="spanbgyellow">《君德如意壶》获国家专利</span>。现任宜兴陶瓷实训基地，制壶培训班辅导教师。<span class="spanbgyellow">（壶的售价高达几万元/把）</span> </p>
 
 	 <p><img src="images/5.jpg"></p>
 	  <p><img src="images/6.jpg"></p>   
@@ -82,7 +82,7 @@ img{ width:100%}
 	  
 		 <p>我们都是专心做壶的人，并不懂网络，更不知道如何在网上卖壶，现在都是我的侄子侄女们在帮我在网上卖壶。后来我听说，有人拿<span class="spanbgyellow">批量机械化生产的低价化工壶(化工泥有毒)、机车壶(普通陶土就能做)和手拉壶</span>充当全手工紫砂壶在网上兜售，知道了此事我的心情异常难过，这是对我们全手工紫砂壶从业者的侮辱。</p>
 		 
-		 <p>我在此也向大家保证，我所售出的每一把壶，<span class="spanbgyellow">保证是宜兴本地原矿石料所产,100%全手工制作.如若有假，假一赔万。用江苏宜兴紫砂陶土烧制而成的紫砂陶茶具，是举世公认的质地最好的茶具，最棒的茶具</span>。</p>
+		 <p>我在此也向大家保证，我所售出的每一把壶，<span class="spanbgyellow">保证是宜兴本地原矿石料所产,100%手工制作,如若有假，假一赔万。用江苏宜兴紫砂陶土烧制而成的紫砂陶茶具，是举世公认的质地最好的茶具，最棒的茶具</span>。</p>
 		 
 		 
  
@@ -181,8 +181,8 @@ img{ width:100%}
 	    <p><span class="spanbg8">1</span>   要订购的亲加我微信：<span class="kuang2" style="color:#FFFFFF">1768717056</span>  ，也可以打开微信扫描下图的二维码加我微信。</p>
 <p><span class="spanbg8">2</span> 在微信上告诉我你的购买信息就可以了</p>
 <p><span class="spanbg8">3</span>  产地发货，全国包邮</p>
-	    <p> <span class="spanbg8">4</span> 每次发货前，我都会准备好紫砂小茶杯一起寄给您</p>
-		<p>买不买没关系，加微信交个朋友。加微信后，送你一本《紫砂壶鉴赏手册》电子书，从入门到精通，是我精心编辑的，价值1000元，很多朋友都说看完成半个行家了，同时，我每天会在微信朋友圈发布一些紫砂壶知识，您可以每天学习一下，避免以后购买的时候上当受骗。</p>
+	    <p> <span class="spanbg8">4</span> 每次发货前，我都会准备好紫砂品茗小杯一起寄给您，免费赠送，略表心意</p>
+		<p>买不买没关系，加微信交个朋友。加微信后，送你一本《紫砂壶鉴赏手册》电子书，从入门到精通，是我精心编辑的，价值999元，很多朋友都说看完成半个行家了，同时，我每天会在微信朋友圈发布一些紫砂壶知识，您可以每天学习一下，避免以后购买的时候上当受骗。</p>
  
 		
 		
