--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ img{max-width:100%;}
 .kuang1{margin:0 auto;background-color:#fff;border-radius:6px; border:solid #df4444 2px;max-width:680px;text-align:left;}
 .kuang2{ margin:0 auto;background-color:#df4444;border-radius:6px; border:solid #df4444 2px;color:#FFFFFF;max-width:680px;text-align:left;}
 .kuang3{margin:0 auto;max-width:680px;text-align:left;}
-.kuang4{ margin:0 auto;background-color:#df4444;border-radius:6px; border:solid #df4444 2px;color:#FFFFFF;max-width:680px;text-align:center;}	
+.kuang4{ margin:0 auto;background-color:#df4444;border-radius:6px; border:solid #df4444 2px;color:#FFFFFF;max-width:680px;}	
 .con{margin:20px;}
 .con h2{ margin:0; background:#008000; color:#FFFFFF; text-indent:5px; padding:5px 0}
 .con h3{ margin:0; background:#008000; color:#FFFFFF; text-indent:5px; padding:5px 0}
