--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ img{ width:100%}
 	    <div class="kuang" style="background-color:#008000; color:#FFFFFF">
        <div class="con"> <p>兄弟姐妹们，紫砂壶是我一生的事业,欢迎大家加我的微信交流
 我的微信号：<span class="kuang2" style="color:#FFFFFF">1768717056</span></p>
-<img src="images/ewm.gif" /> 
+<img src="images/2d_code.jpg" /> 
 </div></div>
 <p><span class="spanbgyellow">紫砂壶泡茶的好处</span></p>
 <p>1、茶香浓郁持久。紫砂壶嘴小、盖严，壶的内壁较粗糙，能有效地防止香气过早散失。长久使用的紫砂茶壶，内壁挂上一层棕红色茶锈，使用时间越长，茶锈积在内壁上越多，故冲泡茶叶后茶汤越加醇郁芳馨。长期使用的紫砂茶壶，即使不放茶，只倒入开水，仍茶香诱人，这是一般茶具所做不到的;</p>
@@ -117,7 +117,7 @@ img{ width:100%}
 	  <div class="kuang" style="background-color:#008000; color:#FFFFFF">
        <div class="con">  
 <p>我希望通过微信把最好的紫砂壶带给大家，加我的微信号：<span class="kuang2" style="color:#FFFFFF">1768717056</span> 或打开微信扫描下图的二维码添加我的微信：</p>
-<img src="images/ewm.gif" /></div>
+<img src="images/2d_code.jpg" /></div>
 </div>
 
 
@@ -154,7 +154,7 @@ img{ width:100%}
 	  <div class="kuang" style="background-color:#008000; color:#FFFFFF">
        <div class="con">  
 <p>我希望通过微信把最好的紫砂壶带给大家，加我的微信号：<span class="kuang2" style="color:#FFFFFF">1768717056</span> 或打开微信扫描下图的二维码添加我的微信：</p>
-<img src="images/ewm.gif" /></div>
+<img src="images/2d_code.jpg" /></div>
 </div>	
 	
 
@@ -209,7 +209,7 @@ img{ width:100%}
 	     <div class="kuang" style="background-color:#008000; color:#FFFFFF">
        <div class="con">
 	   <p>由于加微信：<span class="kuang2" style="color:#FFFFFF">1768717056</span> 的人实在太多，忙不过来，今天最后一次统一赠送这本鉴赏手册，明天可能就不送了，需要的朋友请立即加我微信吧，谢谢合作！：</p>
-	    <img src="images/ewm.gif" width="100%" />
+	    <img src="images/2d_code.jpg" width="100%" />
 		</div></div>
  
 	    
