--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@ img{ width:100%}
 </br><span class="kuang2" style="color:#FFFFFF" align="center">掌柜大学生兼工程师创业，真壶真照，品质为重，口碑相传</span>
 </br>掌柜老家江苏宜兴丁蜀镇农村，传统紫砂产地，周围的人大都从事紫砂行业，可谓靠山吃山、靠水吃水。祖上都做壶，自产自销，我从小也算是对紫砂壶耳濡目染。大学毕业后在上海某世界500强外企担任软件工程师，2014年几经思考再三权衡，毅然放弃现有高薪工作和在上海定居机会，回宜兴老家开创自己喜欢的紫砂事业。这决定很艰难，也需要很大的勇气。
 </br>回来后一切重头开始，寻找好泥料，寻找合作老师，亲自包揽从制作、烧窑、到拍照、客服、发货的几乎全部环节...累，并快乐着。  
-</br>日积月累，口碑相传，在如今整体低迷的市场行情中，却一直保持着稳中有涨的销量，在此感谢我的父母辈和各位壶友的大力支持。也可加我微信交流：1768717056（做壶烧窑事情多，有时可能会回复得晚，请海涵）	       
+</br>日积月累，口碑相传，在如今整体低迷的市场行情中，却一直保持着稳中有涨的销量，在此感谢我的父母辈和各位壶友的大力支持。也可加我微信交流：1768717056（做壶烧窑事情多，有时可能会回复得晚，请海涵）
+<p><img src="images/dream.jpg"></p>
 	       少量珍品,留给有缘人,
 
 家藏的正宗宜兴黄龙山原矿紫砂泥料,采用
