--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
-<title>良心!紫砂壶世家掌柜揭露业界秘密,传授鉴别经验!</title>
+<title>业界良心!紫砂壶世家掌柜揭露行业秘密,传授鉴别经验!</title>
 
 
 <style>
@@ -40,7 +40,7 @@ img{ width:100%}
   <p><img src="images/1.jpg"></p>
 	   
 <p>大家好，我是老杨，专注纯手工宜兴原矿紫砂壶，和我合作过的壶友都知道我的身份经历，这里再向广大新壶友简单介绍下自己：		
-</br><span class="kuang2" style="color:#FFFFFF" align="center">◇◇◇掌柜大学生兼工程师创业紫砂，真壶真照，品质为重，口碑相传◇◇◇</span>
+</br><span class="kuang2" style="color:#FFFFFF" align="center">◇◇掌柜大学生兼工程师创业紫砂，真壶真照，品质为重，口碑相传◇◇</span>
 </br>掌柜老家江苏宜兴丁蜀镇农村，传统紫砂产地，周围人大都是做壶的，靠山吃山靠水吃水。祖上都做壶，自产自销，我从小也对紫砂壶耳濡目染。大学毕业后在上海某世界500强外企担任软件工程师，2014年几经思考再三权衡，毅然放弃上海高薪工作和定居机会，回宜兴老家开创自己喜欢的紫砂事业。这决定很艰难，也需要很大的勇气。
 </br>回来后一切重头开始，寻找好泥料，寻找合作老师，亲自包揽从制作、烧窑、到拍照、客服、发货的几乎全部环节...累，并快乐着。  
 </br>日积月累，口碑相传，在如今整体低迷的市场行情中，却一直保持着稳中有涨的销量，在此感谢我的父母辈和各位壶友的大力支持。
