--- a/index.html
+++ b/index.html
@@ -7,19 +7,19 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
-<title>业界良心!紫砂壶世家掌柜揭露行业秘密,传授鉴别经验!</title>
+<title>业界良心!紫砂壶世家掌柜揭露行业内幕,传授鉴别经验!</title>
 
 
 <style>
 body{text-align:center; font-family:Microsoft YaHei ! important;background:#fff;}
 img{max-width:100%;}
-.kuang{margin:0 auto;background-color:#fff;border-radius:6px; border:dashed  #008000 2px;max-width:680px;text-align:left;}
+.kuang{margin:0 auto;background-color:#fff;border-radius:6px; border:dashed  #b01d08 2px;max-width:680px;text-align:left;}
 .kuang1{margin:0 auto;background-color:#fff;border-radius:6px; border:solid #df4444 2px;max-width:680px;text-align:left;}
 .kuang2{ margin:0 auto;background-color:#df4444;border-radius:6px; border:solid #df4444 2px;color:#FFFFFF;max-width:680px;text-align:left;}
 .kuang3{margin:0 auto;max-width:680px;text-align:left;}
 .con{margin:20px;}
-.con h2{ margin:0; background:#008000; color:#FFFFFF; text-indent:5px; padding:5px 0}
-.con h3{ margin:0; background:#008000; color:#FFFFFF; text-indent:5px; padding:5px 0}
+.con h2{ margin:0; background:#b01d08; color:#FFFFFF; text-indent:5px; padding:5px 0}
+.con h3{ margin:0; background:#b01d08; color:#FFFFFF; text-indent:5px; padding:5px 0}
 .con p {margin-bottom:20px; line-height:28px}
 .con p span{color:#c10000; font-weight:bold; }
 .spanbgyellow{background:#ffff00; color:#c10000;}
@@ -49,7 +49,7 @@ img{ width:100%}
 	 
 	   <p> 因为家庭原因，从小耳闻目染，对紫砂有了很多的了解。每天看着父亲和母亲坚持用<span class="spanbgyellow">传统手工艺制壶，对制壶的每一个细节都严格要求,所以制作周期比较长</span>，越来越觉得，一把紫砂壶的诞生是那么的不容易，而他们态度，对我以后学习制壶的路，产生了很大的影响。</p>
 	   <p>或许是由于从小接触的多了，在我正式学习制壶后，便是得心应手，我做出来的壶很快得到了父亲的认可。在这期间除了在家里跟爷爷和父亲学习制壶，只要有时间父亲就会带我去拜访名师，向其学习、讨教，而我的<span class="spanbgyellow">制壶手艺日益增长</span>。</p>
-	    <div class="kuang" style="background-color:#008000; color:#FFFFFF">
+	    <div class="kuang" style="background-color:#b01d08; color:#FFFFFF">
        <div class="con"> <p>兄弟姐妹们，紫砂壶是我一生的事业,欢迎大家加我的微信交流
 我的微信号：<span class="kuang2" style="color:#FFFFFF">1768717056</span></p>
 <img src="images/2d_code.jpg" /> 
@@ -111,7 +111,7 @@ img{ width:100%}
 	   	   <p><img src="images/15.jpg"></p>
 	   <p>现在我们所有的壶，从泥料开始到烧制成型，我都会全程跟踪，看好把握好每一个环节，保证所有的货出来都是精品。</p>
 	   
-	  <div class="kuang" style="background-color:#008000; color:#FFFFFF">
+	  <div class="kuang" style="background-color:#b01d08; color:#FFFFFF">
        <div class="con">  
 <p>我希望通过微信把最好的紫砂壶带给大家，加我的微信号：<span class="kuang2" style="color:#FFFFFF">1768717056</span> 或打开微信扫描下图的二维码添加我的微信：</p>
 <img src="images/2d_code.jpg" /></div>
@@ -148,7 +148,7 @@ img{ width:100%}
   <p><img src="images/26.jpg"></p>
 	
 	
-	  <div class="kuang" style="background-color:#008000; color:#FFFFFF">
+	  <div class="kuang" style="background-color:#b01d08; color:#FFFFFF">
        <div class="con">  
 <p>我希望通过微信把最好的紫砂壶带给大家，加我的微信号：<span class="kuang2" style="color:#FFFFFF">1768717056</span> 或打开微信扫描下图的二维码添加我的微信：</p>
 <img src="images/2d_code.jpg" /></div>
@@ -203,7 +203,7 @@ img{ width:100%}
  
 
 	<br />
-	     <div class="kuang" style="background-color:#008000; color:#FFFFFF">
+	     <div class="kuang" style="background-color:#b01d08; color:#FFFFFF">
        <div class="con">
 	   <p>由于加微信：<span class="kuang2" style="color:#FFFFFF">1768717056</span> 的人实在太多，忙不过来，今天最后一次统一赠送这本鉴赏手册，明天可能就不送了，需要的朋友请立即加我微信吧，谢谢合作！：</p>
 	    <img src="images/2d_code.jpg" width="100%" />
