--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ img{ width:100%}
   <p><img src="images/1.jpg"></p>
 	   
 <p>大家好，我是老杨，专注纯手工宜兴原矿紫砂壶，和我合作过的壶友都知道我的身份经历，这里再向广大新壶友简单介绍下自己：		
-</br><span class="kuang2" style="color:#FFFFFF" align="center">◇◇掌柜大学生兼工程师创业紫砂，真壶真照，品质为重，口碑相传◇◇</span>
+</br><span class="kuang2" style="color:#b01d08" align="center">◇◇掌柜大学生兼工程师创业紫砂，真壶真照，品质为重，口碑相传◇◇</span>
 </br>掌柜老家江苏宜兴丁蜀镇农村传统紫砂产地，周围人都是做壶的，靠山吃山靠水吃水。祖上都做壶，自产自销，我从小也对紫砂壶耳濡目染。大学毕业后在上海某世界500强外企担任软件工程师，2014年几经思考再三权衡，毅然放弃上海高薪工作和定居机会，回宜兴老家开创自己喜欢的紫砂事业。这决定很艰难，也需要很大的勇气。
 </br>回来后一切重头开始，寻找好泥料，寻找合作老师，亲自包揽从制作、烧窑、到拍照、客服、发货的几乎全部环节...累，并快乐着。  
 </br>日积月累，口碑相传，在如今整体低迷的市场行情中，却一直保持着稳中有涨的销量，在此感谢我的父母辈和各位壶友的大力支持。
@@ -50,8 +50,7 @@ img{ width:100%}
 	   <p> 因为家庭原因，从小耳闻目染，对紫砂有了很多的了解。每天看着父亲和母亲坚持用<span class="spanbgyellow">传统手工艺制壶，对制壶的每一个细节都严格要求,所以制作周期比较长</span>，越来越觉得，一把紫砂壶的诞生是那么的不容易，而他们态度，对我以后学习制壶的路，产生了很大的影响。</p>
 	   <p>或许是由于从小接触的多了，在我正式学习制壶后，便是得心应手，我做出来的壶很快得到了父亲的认可。在这期间除了在家里跟爷爷和父亲学习制壶，只要有时间父亲就会带我去拜访名师，向其学习、讨教，而我的<span class="spanbgyellow">制壶手艺日益增长</span>。</p>
 	    <div class="kuang" style="background-color:#b01d08; color:#FFFFFF">
-       <div class="con"> <p>兄弟姐妹们，紫砂壶是我一生的事业,欢迎大家加我的微信交流
-我的微信号：<span class="kuang2" style="color:#FFFFFF">1768717056</span></p>
+       <div class="con"> <p>各位壶友们，紫砂壶是我一生的事业，欢迎大家加我微信交流：<span class="kuang2" style="color:#FFFFFF">1768717056</span></p>
 <img src="images/2d_code.jpg" /> 
 </div></div>
 <p><span class="spanbgyellow">紫砂壶泡茶的好处</span></p>
@@ -113,7 +112,7 @@ img{ width:100%}
 	   
 	  <div class="kuang" style="background-color:#b01d08; color:#FFFFFF">
        <div class="con">  
-<p>我希望通过微信把最好的紫砂壶带给大家，加我的微信号：<span class="kuang2" style="color:#FFFFFF">1768717056</span> 或打开微信扫描下图的二维码添加我的微信：</p>
+<p>我希望把最好最实用最实惠的紫砂壶带给大家，加我微信：<span class="kuang2" style="color:#FFFFFF">1768717056</span> 或扫描下图二维码添加我微信：</p>
 <img src="images/2d_code.jpg" /></div>
 </div>
 
@@ -150,7 +149,7 @@ img{ width:100%}
 	
 	  <div class="kuang" style="background-color:#b01d08; color:#FFFFFF">
        <div class="con">  
-<p>我希望通过微信把最好的紫砂壶带给大家，加我的微信号：<span class="kuang2" style="color:#FFFFFF">1768717056</span> 或打开微信扫描下图的二维码添加我的微信：</p>
+<p>我希望把最好最实用最实惠的紫砂壶带给大家，加我微信：<span class="kuang2" style="color:#FFFFFF">1768717056</span> 或扫描下图二维码添加我微信：</p>
 <img src="images/2d_code.jpg" /></div>
 </div>	
 	
@@ -167,7 +166,7 @@ img{ width:100%}
 	   <h3>【扫微信关注我们】</h3>
  
 
- <p style="line-height:1.5em">● 请用微信扫描右边的二维码，或加微信号1768717056。</p>
+ <p style="line-height:1.5em">● 请扫描右边的二维码，或加微信号1768717056</p>
  <p style="line-height:1.5em">● 我们会在微信上公布最新做出来的紫砂壶。</p>
  <p style="line-height:1.5em">● 为了让您放心，发货前我们可以在微信上给您先看照片。</p>
  <p style="line-height:1.5em">● 及时关注我们，微信上一起分享紫砂壶的魅力</p>
@@ -205,7 +204,7 @@ img{ width:100%}
 	<br />
 	     <div class="kuang" style="background-color:#b01d08; color:#FFFFFF">
        <div class="con">
-	   <p>由于加微信：<span class="kuang2" style="color:#FFFFFF">1768717056</span> 的人实在太多，忙不过来，今天最后一次统一赠送这本鉴赏手册，明天可能就不送了，需要的朋友请立即加我微信吧，谢谢合作！：</p>
+	   <p>由于加微信：<span class="kuang2" style="color:#FFFFFF">1768717056</span> 的人实在太多，忙不过来，近期再次统一赠送这本鉴赏手册，过段时间可能就不送了，需要的朋友请立即加我微信吧，合作愉快！：</p>
 	    <img src="images/2d_code.jpg" width="100%" />
 		</div></div>
  
