add image & update index.html

--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@ img{ width:100%}
 <body>
   <div class="kuang">
        <div class="con">
-
 	   <h2 align="center">加微信1768717056领取紫砂壶鉴别经验和开壶方法!</h2>
-  <p><img src="images/1.jpg"></p>
-	   
-</br>泥料问题，这也是很多买家最为关心的一个问题，在这里我不得不先说一点就是黄龙山确实是被封了，但是为了满足现在的紫砂壶市场，偷采十分严重，所以爱壶的朋友不需要担心，但是偷采的泥料也普遍是一般的紫泥，清水泥，段泥，朱泥，本山绿等等，上好的泥料还是比较少见了。要说上好的泥料也是有的，在哪里呢，在老板的仓库里，老板不会随随便便去动用那些泥料的，因为稀有珍贵，他们会奇货可居，等着泥料价值越来越高！所以说现在流通的泥料只是一般的泥料，那些说什么泥料陈腐几十年，上好的泥料的卖家，要自己摸摸良心了，对不对得起买家们！以次充好赚买家的钱，是不道德的！现在说说怎么鉴别真紫砂泥，真的紫砂泥有一个特性，表面砂粒感很足(朱泥除外)，而且包含有铁质，沙粒，云母，石英，鸡眼等等，而化工泥却不存在这种情况，多是氧化锰和铁红粉做成，表面光滑毫无颗粒感而言！(朱泥除外)这个是最基础的鉴别紫砂泥的办法！谈一些专业的，建议最好不买天青泥，天青泥基本绝迹，所以现在很多出现的天青泥都调配的。将着色金属氧化物氧化钴、氧化锰，加入本山绿泥中配制而成的一种紫砂色泥。经烧成后， 呈深绿色至蓝绿色，是人工配制为数不多的紫砂色泥之一。天青泥呈色的深浅，随氧化钴、氧化锰加入量的多少而定。所以买家买天青泥的壶也要小心谨慎购买，最好别买！</p>>
-  <span class="kuang2" style="color:#FFFFFF" align="center">◇◇掌柜大学生兼工程师创业紫砂，真壶真照，品质为重，口碑相传◇◇</span>
+   
+<p>大家好，我是宜兴老杨，先曝一个广大壶友最关心的泥料内幕！
+</br>泥料问题，这也是很多买家最为关心的一个问题，在这里我不得不先说一点就是黄龙山确实是被封了，但是为了满足现在的紫砂壶市场，偷采十分严重，所以爱壶的朋友不需要担心，但是偷采的泥料也普遍是一般的紫泥，清水泥，段泥，朱泥，本山绿等等，上好的泥料还是比较少见了。要说上好的泥料也是有的，在哪里呢，在老板的仓库里，老板不会随随便便去动用那些泥料的，因为稀有珍贵，他们会奇货可居，等着泥料价值越来越高！所以说现在流通的泥料只是一般的泥料，那些说什么泥料陈腐几十年，上好的泥料的卖家，要自己摸摸良心了，对不对得起买家们！以次充好赚买家的钱，是不道德的！当然家藏泥几年的还是有很多的。
+</br>现在说说怎么鉴别真紫砂泥，真紫砂泥有一个特性，表面砂粒感很足(朱泥除外)，而且包含有铁质，沙粒，云母，石英，鸡眼等等，而化工泥却不存在这种情况，多是氧化锰和铁红粉做成，表面光滑毫无颗粒感而言！(朱泥除外)这个是最基础的鉴别紫砂泥的办法！谈一些专业的，建议最好不买天青泥，天青泥基本绝迹，所以现在很多出现的天青泥都调配的。将着色金属氧化物氧化钴、氧化锰，加入本山绿泥中配制而成的一种紫砂色泥。经烧成后， 呈深绿色至蓝绿色，是人工配制为数不多的紫砂色泥之一。天青泥呈色的深浅，随氧化钴、氧化锰加入量的多少而定。所以买天青泥的壶也要小心谨慎购买，最好别买！</p>
+<p><img src="images/1.jpg"></p>	
+<p>我是宜兴老杨，专注纯手工原矿紫砂壶，和我合作过的壶友都知道我的身份经历，这里再向新壶友们简单介绍下自己：
+</br><span class="kuang2" style="color:#FFFFFF" align="center">◇◇掌柜大学生兼工程师创业紫砂，真壶真照，品质为重，口碑相传◇◇</span>
   </br>掌柜老家江苏宜兴丁蜀镇农村传统紫砂产地，周围人都是做壶的，靠山吃山靠水吃水。祖上都做壶，自产自销，我从小也对紫砂壶耳濡目染。大学毕业后在上海某世界500强外企担任软件工程师，2014年几经思考再三权衡，毅然放弃上海高薪工作和定居机会，回宜兴老家开创自己喜欢的紫砂事业。这决定很艰难，也需要很大的勇气。
   </br>回来后一切重头开始，寻找好泥料，寻找合作老师，亲自包揽从制作、烧窑、到拍照、客服、发货的几乎全部环节...累，并快乐着。  
   </br>日积月累，口碑相传，在如今整体低迷的市场行情中，却一直保持着稳中有涨的销量，在此感谢我的父母辈和各位壶友的大力支持。
