--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ img{ width:100%}
        <div class="con">
 	   <h2 align="center">加微信1768717056领取紫砂壶鉴别经验和开壶方法!</h2>
    
-<p>大家好，我是宜兴老杨，先曝一个广大壶友最关心的泥料内幕！
-</br>泥料问题，这也是很多买家最为关心的一个问题，在这里我不得不先说一点就是黄龙山确实是被封了，但是为了满足现在的紫砂壶市场，偷采十分严重，所以爱壶的朋友不需要担心，但是偷采的泥料也普遍是一般的紫泥，清水泥，段泥，朱泥，本山绿等等，上好的泥料还是比较少见了。要说上好的泥料也是有的，在哪里呢，在老板的仓库里，老板不会随随便便去动用那些泥料的，因为稀有珍贵，他们会奇货可居，等着泥料价值越来越高！所以说现在流通的泥料只是一般的泥料，那些说什么泥料陈腐几十年，上好的泥料的卖家，要自己摸摸良心了，对不对得起买家们！以次充好赚买家的钱，是不道德的！当然家藏泥几年的还是有很多的。
-</br>现在说说怎么鉴别真紫砂泥，真紫砂泥有一个特性，表面砂粒感很足(朱泥除外)，而且包含有铁质，沙粒，云母，石英，鸡眼等等，而化工泥却不存在这种情况，多是氧化锰和铁红粉做成，表面光滑毫无颗粒感而言！(朱泥除外)这个是最基础的鉴别紫砂泥的办法！谈一些专业的，建议最好不买天青泥，天青泥基本绝迹，所以现在很多出现的天青泥都调配的。将着色金属氧化物氧化钴、氧化锰，加入本山绿泥中配制而成的一种紫砂色泥。经烧成后， 呈深绿色至蓝绿色，是人工配制为数不多的紫砂色泥之一。天青泥呈色的深浅，随氧化钴、氧化锰加入量的多少而定。所以买天青泥的壶也要小心谨慎购买，最好别买！</p>
+<p>大家好，我是宜兴老杨，先曝一个广大壶友最关心的<span class="kuang2" style="color:#FFFFFF">泥料内幕！</span>
+</br>泥料问题，这也是很多买家最为关心的一个问题，在这里我不得不先说一点就是黄龙山确实是被封矿了，但是为了满足现在的紫砂壶市场，偷采十分严重，加上封矿前那么多年疯狂采挖的存量实在太多，所以爱壶的朋友不需要担心。但是偷采的泥料也普遍是常见的紫泥，清水泥，段泥，朱泥，本山绿等等，中等（偏上）档次，极品上好的泥料还是比较少见了。要说上好的泥料也是有的，在哪里呢，在老板的仓库里，老板不会随随便便去动用那些泥料的，因为稀有珍贵，他们会奇货可居，等着泥料价值越来越高！所以说现在流通的泥料只是一般的泥料，那些说什么泥料陈腐几十年，上好的泥料的卖家，要自己摸摸良心了，对不对得起买家们！以次充好赚买家的钱，是不道德的！当然家藏泥几年的还是有很多的，几十年的太夸张了。
+</br>现在说说怎么鉴别真紫砂泥，真紫砂泥有一个特性，表面砂粒感很足（朱泥除外），而且包含有铁质，沙粒，云母，石英，鸡眼等等，而化工泥却不存在这种情况，多是氧化锰和铁红粉做成，表面光滑毫无颗粒感而言！（朱泥除外）。这个是最基础的鉴别紫砂泥的办法！谈一些专业的，建议最好不买天青泥，天青泥基本绝迹，所以现在很多出现的天青泥都调配的。将着色金属氧化物氧化钴、氧化锰，加入本山绿泥中配制而成的一种紫砂色泥。经烧成后， 呈深绿色至蓝绿色，是人工配制为数不多的紫砂色泥之一。天青泥呈色的深浅，随氧化钴、氧化锰加入量的多少而定。所以买天青泥的壶也要小心谨慎购买，最好别买！</p>
 <p><img src="images/1.jpg"></p>	
 <p>我是宜兴老杨，专注纯手工原矿紫砂壶，和我合作过的壶友都知道我的身份经历，这里再向新壶友们简单介绍下自己：
 </br><span class="kuang2" style="color:#FFFFFF" align="center">◇◇掌柜大学生兼工程师创业紫砂，真壶真照，品质为重，口碑相传◇◇</span>
