--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@ img{ width:100%}
 <p><img src="images/1.jpg"></p>	
 <p>我是宜兴老杨，专注纯手工原矿紫砂壶，和我合作过的壶友都知道我的身份经历，这里再向新壶友们简单介绍下自己：
 </br><span class="kuang2" style="color:#FFFFFF" align="center">◇◇掌柜大学生兼工程师创业紫砂，真壶真照，品质为重，口碑相传◇◇</span>
-  </br>掌柜老家江苏宜兴丁蜀镇农村传统紫砂产地，周围人都是做壶的，靠山吃山靠水吃水。祖上都做壶，自产自销，我从小也对紫砂壶耳濡目染。大学毕业后在上海某世界500强外企担任软件工程师，2014年几经思考再三权衡，毅然放弃上海高薪工作和定居机会，回宜兴老家开创自己喜欢的紫砂事业。这决定很艰难，也需要很大的勇气。
-  </br>回来后一切重头开始，亲自包揽几乎全部环节...日积月累，口碑相传，在如今整体低迷的市场行情中，却一直保持着稳中有涨的销量，在此感谢我的父母辈和各位壶友的大力支持！
-<p><img src="images/dream.jpg"></p>
-少量珍品,留给有缘人,家藏的正宗宜兴黄龙山原矿紫砂泥料,采用宜兴传统纯手工艺制壶,做出一把全手工好壶大概需要<span class="spanbgyellow">半个月左右</span>. </p>
+  </br>掌柜老家江苏宜兴丁蜀镇农村传统紫砂产地，周围人都是做壶的，靠山吃山靠水吃水。祖上都做壶，我从小也对紫砂壶耳濡目染。大学毕业后在上海某世界500强外企担任软件工程师，2014年几经思考再三权衡，毅然放弃上海高薪工作和定居机会，回宜兴老家开创自己喜欢的紫砂事业。这决定很艰难，也需要很大的勇气。
+  </br>回来后一切重头开始，亲自包揽几乎全部环节...日积月累，口碑相传，在如今整体低迷的市场经济行情中，却一直保持着稳中有涨的销量，在此感谢我的父母辈和各位壶友的大力支持！
+
+<p>我家做壶自产自销，也代理亲戚朋友做的好壶，少量珍品，留给有缘人。家藏数年的正宗宜兴黄龙山原矿紫砂泥料，采用传统手工艺制壶，有时做出一把难度较大的全手工精品壶都要半个月到一个月。 </p>
 	 
-	   <p> 因为家庭原因，从小耳闻目染，对紫砂有了很多的了解。每天看着父亲和母亲坚持用<span class="spanbgyellow">传统手工艺制壶，对制壶的每一个细节都严格要求,所以制作周期比较长</span>，越来越觉得，一把紫砂壶的诞生是那么的不容易，而他们态度，对我以后学习制壶的路，产生了很大的影响。</p>
+	   <p> 因为家庭做壶原因，从小耳闻目染，对紫砂有了很多的了解。每天看着父母亲坚持用<span class="spanbgyellow">传统手工艺制壶，对制壶的每一个细节都严格要求，所以制作周期比较长</span>，越来越觉得，一把紫砂壶的诞生是那么的不容易，而他们做壶的严谨态度对我此后学习做壶产生了很大的影响。</p>
 	   <p>或许是由于从小接触的多了，在我正式学习制壶后，便是得心应手，我做出来的壶很快得到了父亲的认可。在这期间除了在家里跟爷爷和父亲学习制壶，只要有时间父亲就会带我去拜访名师，向其学习、讨教，而我的<span class="spanbgyellow">制壶手艺日益增长</span>。</p>
 	    <div class="kuang" style="background-color:#b01d08; color:#FFFFFF">
        <div class="con"> <p>各位壶友们，紫砂壶是我一生的事业，欢迎大家加我微信交流：<span class="kuang2" style="color:#FFFFFF">1768717056</span></p>
