--- a/index.html
+++ b/index.html
@@ -10,7 +10,21 @@
 <meta name="mobile-web-app-capable" content="yes">
 <title>业界良心!紫砂壶世家掌柜揭露行业内幕,传授鉴别经验!</title>
 
-
+<script>
+(function(){
+    var bp = document.createElement('script');
+    var curProtocol = window.location.protocol.split(':')[0];
+    if (curProtocol === 'https'){
+   bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+  }
+  else{
+  bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+  }
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(bp, s);
+})();
+</script>
+	
 <style>
 body{text-align:center; font-family:Microsoft YaHei ! important;background:#fff;}
 img{max-width:100%;}
