--- a/index.html
+++ b/index.html
@@ -180,16 +180,14 @@ img{ width:100%}
        <div class="con">
 	   <h3>【订购方式】</h3>	   
  	    
-	    <p><span class="spanbg8">1</span>   要订购的亲加我微信：<span class="kuang2" style="color:#FFFFFF">1768717056</span>  ，也可以打开微信扫描下图的二维码加我微信。</p>
+	    <p><span class="spanbg8">1</span>   要订购的壶友加我微信：<span class="kuang2" style="color:#FFFFFF">1768717056</span>  ，也可以扫描下图的二维码加我微信。</p>
 <p><span class="spanbg8">2</span> 在微信上告诉我你的购买信息就可以了</p>
-<p><span class="spanbg8">3</span>  产地发货，全国包邮</p>
-	    <p> <span class="spanbg8">4</span> 每次发货前，我都会准备好紫砂品茗小杯一起寄给您，免费赠送，略表心意</p>
-		<p>买不买没关系，加微信交个朋友。加微信后，送你一本《紫砂壶鉴赏手册》电子书，从入门到精通，是我精心编辑的，价值999元，很多朋友都说看完成半个行家了，同时，我每天会在微信朋友圈发布一些紫砂壶知识，您可以每天学习一下，避免以后购买的时候上当受骗。</p>
- 
-		
-		
+<p><span class="spanbg8">3</span> 宜兴产地发货，全国包邮</p>
+	    <p> <span class="spanbg8">4</span> 每次发货前，我都会例行认真检查；对于大部分壶，我都会准备好紫砂品茗小杯一起寄给您，免费赠送，略表心意</p>
+		<p>买不买没关系，加微信交个朋友。加微信后，送你一本紫砂壶鉴赏手册电子书，从入门到精通，是我精心编辑的，价值999元，很多朋友都说看完成半个行家了。
+			同时，我每天会在微信朋友圈发布一些紫砂壶知识，您可以每天学习一下，避免以后购买的时候上当受骗。</p>
+ 		
 <h3>列举部分《紫砂壶鉴赏手册》的内容</h3>
-
 
 <p  style="line-height:1.2em">1.为什么紫砂壶透气性好？有什么特性？</p>
 <p  style="line-height:1.2em">2.紫砂壶有哪些神奇功效？</p>
@@ -201,32 +199,21 @@ img{ width:100%}
 <p  style="line-height:1.2em">8.紫砂壶8个保养注意事项</p>
 
  
-
 	<br />
 	     <div class="kuang" style="background-color:#b01d08; color:#FFFFFF">
        <div class="con">
 	   <p>由于加微信 <span class="kuang2" style="color:#FFFFFF">1768717056</span> 的人实在太多，忙不过来，近期再次统一赠送这本鉴赏手册，过段时间可能就不送了，需要的朋友请立即加我微信吧，合作愉快！：</p>
 	    <img src="images/2d_code.jpg" width="100%" />
 		</div></div>
- 
-	    
-
+ 	
 	   </div>
   </div>
   
- 
-  
- 
-   
-
 <br /><br />
  
 <center>版权所有© 氿砂堂®紫砂壶世家<br>  <br>  </center>
 
-
-
 <center> <br>  <br>  </center>
 </div>
-
  
 </body></html>
