--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="mobile-web-app-capable" content="yes">
-<title>业界良心!紫砂壶世家掌柜揭露行业内幕_传授紫砂壶鉴别经验-氿砂堂紫砂</title>
+<title>业界良心!紫砂壶世家掌柜揭露行业内幕_传授紫砂壶鉴别经验-氿砂堂紫砂艺术</title>
 <meta name="Keywords" content="紫砂壶,宜兴紫砂壶,紫砂壶黑幕,紫砂壶鉴别,紫砂壶开壶,紫砂壶泥料,紫砂壶真假,紫砂壶假大师,紫砂壶名家,紫砂壶价格,紫砂壶保养,紫砂壶图片" />
 <meta name="Description" content="我是宜兴老杨，专注纯手工原矿紫砂壶，老家江苏宜兴丁蜀镇农村传统紫砂产地，我希望把最好最实用最实惠的紫砂壶带给大家，加我微信1768717056领取紫砂壶鉴别经验和开壶方法!" />
+<meta name="copyright" content="氿砂堂紫砂艺术" />
 	
 <script>
 (function(){
